fixed blockquote letter spacing

--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -132,7 +132,6 @@
    color: $text-color;
    border-left: 4px solid $grey-color-light;
    padding-left: $spacing-unit / 2;
-   letter-spacing: -1px;
  
    > :last-child {
      margin-bottom: 0;
